docker-backends/ingressroutes.yaml
# IngressRoutes for Docker services on node 2 routed via K8s Traefik

---
# Nextcloud AIO
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-theater
  namespace: docker-backends
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.sommertheater-altrossthal.de`)
      kind: Rule
      services:
        - name: nextcloud-theater
          port: 11000
  tls:
    certResolver: cloudflare
